--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
 asgiref==3.2.3
+blessings==1.7
+bpython==0.18
+certifi==2019.11.28
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+curtsies==0.3.0
 Django==3.0
+django-rest-swagger==2.2.0
 djangorestframework==3.11.0
+greenlet==0.4.15
+idna==2.8
+itypes==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+openapi-codec==1.3.2
+Pillow==6.2.1
 pkg-resources==0.0.0
+Pygments==2.5.2
 pytz==2019.3
+PyYAML==5.2
+requests==2.22.0
+simplejson==3.17.0
+six==1.13.0
 sqlparse==0.3.0
+typing==3.7.4.1
+uritemplate==3.0.0
+urllib3==1.25.7
+wcwidth==0.1.7
