--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,13 @@ Django==3.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 greenlet==0.4.15
+gunicorn==20.0.4
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 openapi-codec==1.3.2
 Pillow==6.2.1
-pkg-resources==0.0.0
 Pygments==2.5.2
 pytz==2019.3
 PyYAML==5.2
@@ -28,3 +28,4 @@ typing==3.7.4.1
 uritemplate==3.0.0
 urllib3==1.25.7
 wcwidth==0.1.7
+whitenoise==5.0.1
