--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 curtsies==0.3.0
+dj-database-url==0.5.0
 Django==3.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
